--- a/public/less/ssb-site-builder/ssb-froala.less
+++ b/public/less/ssb-site-builder/ssb-froala.less
@@ -236,12 +236,12 @@ body[ng-controller] .fr-popup .fr-buttons {
 .ssb-table-black-border {
     border-width: 1px;
     border-color: #000!important;
-    border-style: solid!important;
+    border-style: double!important;
 }
 .ssb-table-white-border {
     border-width: 1px;
     border-color: #fff!important;
-    border-style: solid!important;
+    border-style: double!important;
 }
 .ssb-editor-style-line-height-small-1 {
     line-height: normal !important;
