#10071 front end blog duplicate page issue

--- a/public/less/ssb-site-builder/ssb-components/ssb-blog-post-list.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-blog-post-list.less
@@ -247,6 +247,13 @@
     padding: 0!important;
 }
 
+.ssb-page-blog-list .ssb-section-type-social-link .inner-page,
+.ssb-page-blog-list .ssb-section-type-social-link + .ssb-page-section-text-only .inner-page,
+.ssb-page-blog-list .ssb-page-layout-row-2-col .col-xs-12.col-md-4 .ssb-section-type-social-link .inner-page,
+.ssb-page-blog-list .ssb-page-layout-row-2-col .col-xs-12.col-md-4 .ssb-page-section-text-only .inner-page {
+    padding: 0!important;
+}
+
 .blog-list-author,
 .blog-list-tag {
     .ssb-blog-featured-slider {
