#10071 preview blog duplicate page issue

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -26,7 +26,7 @@
 
 <div ssb-data-styles
     ng-if="page.layout === 'ssb-layout__header_2-col_footer'"
-    ng-class="{ 'ssb-page-blog-list': page.handle === 'blog-list' }">
+    ng-class="{ 'ssb-page-blog-list': page.handle === 'blog-list' || page.isBlogCopy}">
 
     <div class="ssb-layout__header_2-col_footer">
 
