--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -56,6 +56,13 @@
                 margin:20px;
             }
         }
+        .image-50-details{
+            width: 50%;
+            height: 396px ;
+        }
+        .image-50-details .ssb-element-text{
+            height: 396px ;
+        }
         div.image-overlay{
             overflow: hidden;
             width: 100%;
