--- a/public/components/image-gallery_v4.html
+++ b/public/components/image-gallery_v4.html
@@ -4,15 +4,18 @@
 * All use or reproduction of any or all of this content must be approved.
 * Please contact info@indigenous.io for approval or questions.
 *
--->
-
+--> 
 <div ng-class="component.type+'-v'+component.version">
     <div class="img-container" ng-class="{'slider-dot-color': component.slider.sliderDotColor, 'slider-active-dot-color': component.slider.sliderActiveDotColor, 'slider-dot-color-opacity': component.slider.sliderDotColorOpacity ||component.slider.sliderDotColorOpacity==0 }">
         <div ng-if="dataLoaded" class="slider-main slider-main-{{component._id}}" ind-slider='{slidesToShow:1, touchMove:{{touchMove}}, draggable:{{draggable}}, dots:true, arrows:false,  slidesToScroll:1, autoplay:{{autoplay}},  asNavFor: ".slider-nav-thumbnails-{{component._id}}"}'>
             <div class="img-row col-sm-12 col-xs-12 image-wrap {{isEditing ? 'editing' : ''}}" ng-repeat="image in component.images track by $index">
 
-                    <div class="img-responsive img-gallery-{{$index}} image-gallery center" data-index="{{$index}}" ng-click="addImageFromMedia(component._id, $index, true)" alt="{{image.label}}" ng-attr-style="background-image: url({{image.url}})"></div>
-
+                    <div class="img-responsive img-gallery-{{$index}} image-gallery center" data-index="{{$index}}" alt="{{image.label}}" ng-attr-style="background-image: url({{image.url}})">
+                         <div ng-if="component.halfOverlay" elem ng-model="image.details" class="image-50-details"></div> 
+                    </div>
+                    <div ng-if="isEditing" class="link-single-image center"  ng-click="addImageFromMedia(component._id, $index, true)" >
+                        <button class="ng-scope btn-link-single-image" tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Change this image."><i class='fa fa-link'></i></button>
+                    </div>
                     <div ng-if="isEditing" class="delete-single-image center" ng-click="deleteImageFromGallery($index)">
                         <button class="ng-scope btn-delete-single-image" tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Delete this image."><i class='fa fa-trash'></i></button>
                     </div>
