--- a/public/less/frontend/components/navbar-custom.less
+++ b/public/less/frontend/components/navbar-custom.less
@@ -151,6 +151,7 @@
                 }
                 .logo-1{
                     float: left;
+                    width:100%;
                 }
             }
             .navbar-collapse{
