--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -135,6 +135,7 @@ ul.nav {
             display: block;
             margin: 5px auto;
             text-align: left;
+            width: 100%;
         }
     }
     .container {
