--- a/public/less/frontend/components/navbar-v2.less
+++ b/public/less/frontend/components/navbar-v2.less
@@ -36,6 +36,7 @@
             height: auto;
             padding: 0;
             color: inherit;
+            width: 100%;
             &:hover{
                 color: inherit;
             }
