--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -96,7 +96,7 @@
             background: no-repeat 0 0;
             min-height: 100%;
             background-position: 50% 0px;
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
             width: 100%;
