--- a/public/less/frontend/components/text-only-v1.less
+++ b/public/less/frontend/components/text-only-v1.less
@@ -1,6 +1,9 @@
 .text-only-v1 {
 	@media (max-width: 720px) {
         .word-break {
+            a{
+                word-break: break-word;
+            }
             span, a{
                 display: inline-block;
             }
