#10377 nav logo fix

--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -323,6 +323,7 @@
                     height: auto;
                     padding: 0;
                     color: inherit;
+                    width:100%;
                     &:hover{
                         color: inherit;
                     }
@@ -365,7 +366,7 @@
                     max-width: 500px;
                     text-align: center;
                     img:not(.fr-dii) {
-                        margin: 0 auto;
+                        /* margin: 0 auto; */
                         display: block;
                     }
                 }
