--- a/public/less/frontend/components/navbar-v2.less
+++ b/public/less/frontend/components/navbar-v2.less
@@ -36,7 +36,7 @@
             height: auto;
             padding: 0;
             color: inherit;
-            width: 100%;
+            width: 100% !important;
             &:hover{
                 color: inherit;
             }
