SSB > Custom link size does not get updated on footer component, if user tries to update the font size through style settings #10367

--- a/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
@@ -27,7 +27,7 @@
     background-color: {{vm.state.page.styles.bodyBackgroundColor || vm.state.website.themeOverrides.styles.bodyBackgroundColor}};
 }
 
-.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-component .element-wrap {
+.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-component .element-wrap, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-component .footer-container .powered-by {
     font-size: {{vm.state.website.themeOverrides.styles.fontSize}}px;
     font-family: {{vm.state.website.themeOverrides.styles.fontFamily}};
     letter-spacing: {{vm.state.website.themeOverrides.styles.letterSpacing}}px;
