--- a/public/components/image-slider_v1.html
+++ b/public/components/image-slider_v1.html
@@ -17,7 +17,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" data-ng-repeat="image in images track by $index">
         <div class="item {{$index ==0?'active':''}}">
-            <div class="fill" style="background-image:url('{{image.url}}');"></div>
+            <div class="fill" ng-attr-style="background-image:url('{{image.url}}');"></div>
             <div class="carousel-caption" style="display: none;">
                 <h2>Yoga Instruction</h2>
                 <a href="#" class="button">View Schedule</a>
