Updated background image refrences sections

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-card/ssb-blog-post-card.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-blog-post/ssb-blog-post-card/ssb-blog-post-card.component.html
@@ -7,7 +7,7 @@
 
     <div ng-if="vm.post" class="ssb-media">
 
-        <div ng-if="vm.post.featured_image && vm.compactView" class="ssb-media-left blog-post-image-container" style="background-image: url('{{vm.post.featured_image}}');" >
+        <div ng-if="vm.post.featured_image && vm.compactView" class="ssb-media-left blog-post-image-container" ng-attr-style="background-image: url('{{vm.post.featured_image}}');" >
         </div>
 
         <div ng-if="vm.post.featured_image && !vm.compactView" class="ssb-media-left">
