--- a/public/components/component-wrap.html
+++ b/public/components/component-wrap.html
@@ -88,7 +88,7 @@
                              {{component.bg.img.parallax ? parallax-background : ""}}
                              ng-attr-parallax-ratio="{{component.bg.img.parallax ? '0.4' : '1'}}"
                              ng-attr-parallax-x-position="{{component.bg.img.position}}"
-                             ng-attr-style="'background': url('{{component.bg.img.url}}'),
+                             ng-attr-style="background: url('{{component.bg.img.url}}');
                                 background-size: cover;
                                 background-repeat: no-repeat;
                                 background-position: component.bg.img.position"
