--- a/templates/emails/base_email_v2.jade
+++ b/templates/emails/base_email_v2.jade
@@ -143,7 +143,7 @@ html
 
               if component.type === 'email-1-col'
                 - var url="https:"+component.bg.img.url;
-                | <div style="float:!{component.spacing.ml=='auto' && component.spacing.mr == 'auot' ? 'none' : 'left'}; background-color: !{component.bg.color};background-image: url(!{url});padding-top: !{component.spacing.pt};padding-bottom: !{component.spacing.pb || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb  || 0};margin-left: !{component.spacing.ml  || 0};margin-right: !{component.spacing.mr || 0};"> <table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                | <div style="float:left;width: 100%; background-color: !{component.bg.color};background-image: url(!{url});padding-top: !{component.spacing.pt};padding-bottom: !{component.spacing.pb || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb  || 0};margin-left: !{component.spacing.ml  || 0};margin-right: !{component.spacing.mr || 0};"> <table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 if component.title
                     |     <tr>
                     |         <td>
@@ -184,7 +184,7 @@ html
 
               if component.type === 'email-2-col'
                 - var url="https:"+component.bg.img.url;
-                | <div style="float:!{component.spacing.ml=='auto' && component.spacing.mr == 'auot' ? 'none' : 'left'};background-color: !{component.bg.color};padding-top: !{component.spacing.pt || 0};background-image: url(!{url});padding-bottom: !{component.spacing.pb  || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr  || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb || 0};margin-left: !{component.spacing.ml || 0};margin-right: !{component.spacing.mr || 0};"> <table class="email-component-container  {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                | <div style="float:left;width: 100%;background-color: !{component.bg.color};padding-top: !{component.spacing.pt || 0};background-image: url(!{url});padding-bottom: !{component.spacing.pb  || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr  || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb || 0};margin-left: !{component.spacing.ml || 0};margin-right: !{component.spacing.mr || 0};"> <table class="email-component-container  {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 if component.title
                     |     <tr>
                     |         <td>
@@ -234,7 +234,7 @@ html
 
               if component.type === 'email-3-col'
                 - var url="https:"+component.bg.img.url;
-                | <div style="float:!{component.spacing.ml=='auto' && component.spacing.mr == 'auot' ? 'none' : 'left'};background-color: !{component.bg.color};background-image: url(!{url});padding-top: !{component.spacing.pt || 0};padding-bottom: !{component.spacing.pb || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb || 0};margin-left: !{component.spacing.ml || 0};margin-right: !{component.spacing.mr || 0};"><table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                | <div style="float:left;width: 100%;background-image: url(!{url});padding-top: !{component.spacing.pt || 0};padding-bottom: !{component.spacing.pb || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb || 0};margin-left: !{component.spacing.ml || 0};margin-right: !{component.spacing.mr || 0};"><table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 if component.title
                     |     <tr>
                     |         <td>
@@ -293,7 +293,7 @@ html
 
               if component.type === 'email-footer'
                 - var url="https:"+component.bg.img.url;
-                | <div style="float:!{component.spacing.ml=='auto' && component.spacing.mr == 'auot' ? 'none' : 'left'};background-color: !{component.bg.color};background-image: url(!{url});padding-top: !{component.spacing.pt || 0};padding-bottom: !{component.spacing.pb || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb || 0};margin-left: !{component.spacing.ml || 0};margin-right: !{component.spacing.mr || 0};"><table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                | <div style="float:left;width: 100%;;background-color: !{component.bg.color};background-image: url(!{url});padding-top: !{component.spacing.pt || 0};padding-bottom: !{component.spacing.pb || 0};padding-left: !{component.spacing.pl || 0};padding-right: !{component.spacing.pr || 0};margin-top: !{component.spacing.mt || 0};margin-bottom: !{component.spacing.mb || 0};margin-left: !{component.spacing.ml || 0};margin-right: !{component.spacing.mr || 0};"><table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 |     <tr>
                 |         <td>
                 |             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" id="templateColumns">
