--- a/templates/snippets/index_body_scripts_minimized.jade
+++ b/templates/snippets/index_body_scripts_minimized.jade
@@ -19,8 +19,8 @@ script.
 // - Google Analytics
 script.
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'UA-48234806-2', 'auto');
-    ga('send', 'pageview');
+    ga('create', 'UA-48234806-2', 'auto', 'platform');
+    ga('platform.send', 'pageview');
 script(async src='https://www.google-analytics.com/analytics.js')
 // - End Google Anlytics
 
